--- a/package.json
+++ b/package.json
@@ -1,50 +1,55 @@
 {
-	"name": "@commercelayer/js-auth",
-	"private": true,
-	"version": "1.0.0",
-	"description": "Commerce Layer Javascript Auth",
-	"repository": {
-		"url": "https://github.com/commercelayer/commercelayer-js-auth.git"
-	},
-	"author": {
-		"name": "Alessandro Casazza",
-		"email": "alessandro@commercelayer.io"
-	},
-	"main": "./dist/index.js",
-	"types": "./dist/index.d.ts",
-	"files": ["dist"],
-	"scripts": {
-		"test": "jest",
-		"test:watch": "jest --watch",
-		"build": "rm -rf ./dist && tsc -p ./tsconfig.prod.json",
-		"watch": "webpack --progress --watch",
-		"start": "webpack-dev-server --config webpack.dev.js"
-	},
-	"license": "MIT",
-	"jest": {
-		"setupFiles": ["dotenv/config"],
-		"moduleFileExtensions": ["ts", "js"],
-		"transform": {
-			"\\.(ts|js|snap)$": "ts-jest"
-		}
-	},
-	"dependencies": {
-		"@types/jest": "^24.0.22",
-		"@types/mocha": "^5.2.7",
-		"client-oauth2": "^4.2.5",
-		"dotenv": "^8.2.0",
-		"dotenv-webpack": "^1.7.0"
-	},
-	"devDependencies": {
-		"jest": "^24.9.0",
-		"path": "^0.12.7",
-		"query-string": "^6.8.3",
-		"ts-jest": "^24.1.0",
-		"ts-loader": "^6.2.1",
-		"typescript": "^3.7.2",
-		"webpack": "^4.41.2",
-		"webpack-cli": "^3.3.10",
-		"webpack-dev-server": "^3.9.0",
-		"webpack-merge": "^4.2.2"
-	}
+  "name": "@commercelayer/js-auth",
+  "private": false,
+  "version": "1.0.0",
+  "description": "Commerce Layer Javascript Auth",
+  "repository": {
+    "url": "https://github.com/commercelayer/commercelayer-js-auth.git"
+  },
+  "author": {
+    "name": "Alessandro Casazza",
+    "email": "alessandro@commercelayer.io"
+  },
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
+  "files": ["dist", "package.json", "README.md"],
+  "keywords": ["jamstack", "headless", "ecommerce", "api"],
+  "bugs": {
+    "url": "https://github.com/commercelayer/commercelayer-js-auth/issues"
+  },
+  "homepage": "https://github.com/commercelayer/commercelayer-js-auth#readme",
+  "scripts": {
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "build": "rm -rf ./dist && tsc -p ./tsconfig.prod.json",
+    "watch": "webpack --progress --watch",
+    "start": "webpack-dev-server --config webpack.dev.js"
+  },
+  "license": "MIT",
+  "jest": {
+    "setupFiles": ["dotenv/config"],
+    "moduleFileExtensions": ["ts", "js"],
+    "transform": {
+      "\\.(ts|js|snap)$": "ts-jest"
+    }
+  },
+  "dependencies": {
+    "@types/jest": "^24.0.23",
+    "@types/mocha": "^5.2.7",
+    "client-oauth2": "^4.2.5",
+    "dotenv": "^8.2.0",
+    "dotenv-webpack": "^1.7.0"
+  },
+  "devDependencies": {
+    "jest": "^24.9.0",
+    "path": "^0.12.7",
+    "query-string": "^6.9.0",
+    "ts-jest": "^24.2.0",
+    "ts-loader": "^6.2.1",
+    "typescript": "^3.7.2",
+    "webpack": "^4.41.2",
+    "webpack-cli": "^3.3.10",
+    "webpack-dev-server": "^3.9.0",
+    "webpack-merge": "^4.2.2"
+  }
 }
