--- a/package.json
+++ b/package.json
@@ -11,8 +11,18 @@
   },
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
-  "files": ["dist", "package.json", "README.md"],
-  "keywords": ["jamstack", "headless", "ecommerce", "api"],
+  "files": [
+    "dist",
+    "package.json",
+    "README.md"
+  ],
+  "keywords": [
+    "jamstack",
+    "headless",
+    "ecommerce",
+    "api",
+    "auth"
+  ],
   "bugs": {
     "url": "https://github.com/commercelayer/commercelayer-js-auth/issues"
   },
@@ -27,8 +37,13 @@
   },
   "license": "MIT",
   "jest": {
-    "setupFiles": ["dotenv/config"],
-    "moduleFileExtensions": ["ts", "js"],
+    "setupFiles": [
+      "dotenv/config"
+    ],
+    "moduleFileExtensions": [
+      "ts",
+      "js"
+    ],
     "transform": {
       "\\.(ts|js|snap)$": "ts-jest"
     }
@@ -41,14 +56,13 @@
     "dotenv-webpack": "^1.7.0",
     "@types/jest": "^24.0.23",
     "@types/mocha": "^5.2.7",
-
-    "@babel/plugin-proposal-optional-chaining": "^7.7.4",
+    "@babel/plugin-proposal-optional-chaining": "^7.7.5",
     "jest": "^24.9.0",
     "path": "^0.12.7",
     "query-string": "^6.9.0",
     "ts-jest": "^24.2.0",
     "ts-loader": "^6.2.1",
-    "typescript": "^3.7.2",
+    "typescript": "^3.7.3",
     "webpack": "^4.41.2",
     "webpack-cli": "^3.3.10",
     "webpack-dev-server": "^3.9.0",
