--- a/package.json
+++ b/package.json
@@ -52,16 +52,17 @@
     "client-oauth2": "^4.2.5"
   },
   "devDependencies": {
-    "dotenv": "^8.2.0",
-    "dotenv-webpack": "^1.7.0",
+    "@babel/plugin-proposal-optional-chaining": "^7.7.5",
     "@types/jest": "^24.0.23",
     "@types/mocha": "^5.2.7",
-    "@babel/plugin-proposal-optional-chaining": "^7.7.5",
+    "dotenv": "^8.2.0",
+    "dotenv-webpack": "^1.7.0",
     "jest": "^24.9.0",
     "path": "^0.12.7",
     "query-string": "^6.9.0",
     "ts-jest": "^24.2.0",
     "ts-loader": "^6.2.1",
+    "tsdx": "^0.11.0",
     "typescript": "^3.7.3",
     "webpack": "^4.41.2",
     "webpack-cli": "^3.3.10",
