feat: throw error if scope is not exist in sales channel application

--- a/package.json
+++ b/package.json
@@ -35,6 +35,9 @@
     "watch": "webpack --progress --watch",
     "start": "webpack-dev-server --config webpack.dev.js"
   },
+  "publishConfig": {
+    "registry": "https://npm.pkg.github.com/"
+  },
   "license": "MIT",
   "jest": {
     "setupFiles": [
