--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
   },
   "homepage": "https://github.com/commercelayer/commercelayer-js-auth#readme",
   "scripts": {
-    "test": "jest",
+    "test": "tsdx test",
+    "test:coverage": "tsdx test --coverage",
     "test:watch": "jest --watch",
     "build": "tsdx build --tsconfig ./tsconfig.prod.json --entry ./src/index.ts",
     "build:types": "dts-bundle-generator -o ./dist/types.d.ts ./src/@types/index.ts --project tsconfig.prod.json",
@@ -36,37 +37,23 @@
     "start": "webpack-dev-server --config webpack.dev.js"
   },
   "license": "MIT",
-  "jest": {
-    "setupFiles": [
-      "dotenv/config"
-    ],
-    "moduleFileExtensions": [
-      "ts",
-      "js"
-    ],
-    "transform": {
-      "\\.(ts|js|snap)$": "ts-jest"
-    }
-  },
   "dependencies": {
-    "client-oauth2": "^4.2.5"
+    "client-oauth2": "^4.3.3"
   },
   "devDependencies": {
-    "@babel/plugin-proposal-optional-chaining": "^7.8.3",
-    "@types/jest": "^24.9.0",
-    "@types/mocha": "^5.2.7",
+    "@babel/plugin-proposal-optional-chaining": "^7.12.7",
+    "@rollup/plugin-alias": "^3.1.1",
+    "@types/jest": "^26.0.20",
+    "@types/mocha": "^8.2.0",
     "dotenv": "^8.2.0",
-    "dotenv-webpack": "^1.7.0",
-    "jest": "^25.1.0",
+    "dotenv-webpack": "^6.0.0",
+    "jest": "^26.6.3",
     "path": "^0.12.7",
-    "query-string": "^6.10.1",
-    "ts-jest": "^24.3.0",
-    "ts-loader": "^6.2.1",
-    "tsdx": "^0.12.3",
-    "typescript": "^3.7.5",
-    "webpack": "^4.41.5",
-    "webpack-cli": "^3.3.10",
-    "webpack-dev-server": "^3.10.1",
-    "webpack-merge": "^4.2.2"
+    "query-string": "^6.13.8",
+    "ts-jest": "^26.4.4",
+    "ts-loader": "^8.0.14",
+    "tsconfig-paths-jest": "^0.0.1",
+    "tsdx": "^0.14.1",
+    "typescript": "^4.1.3"
   }
 }
