--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@rollup/plugin-alias": "^3.1.1",
     "@types/jest": "^26.0.20",
     "@types/mocha": "^8.2.0",
+    "@zerollup/ts-transform-paths": "^1.7.18",
     "dotenv": "^8.2.0",
     "dotenv-webpack": "^6.0.0",
     "jest": "^26.6.3",
@@ -56,6 +57,7 @@
     "ts-loader": "^8.0.14",
     "tsconfig-paths-jest": "^0.0.1",
     "tsdx": "^0.14.1",
+    "ttypescript": "^1.5.12",
     "typescript": "^4.1.3"
   }
 }
