--- a/package.json
+++ b/package.json
@@ -36,7 +36,40 @@
     "version:major": "npm version major",
     "publish:patch": "npm run build && npm run version:patch && git push --follow-tags && npm publish --access public",
     "publish:minor": "npm run build && npm run version:minor && git push --follow-tags && npm publish --access public",
-    "publish:major": "npm run build && npm run version:major && git push --follow-tags && npm publish --access public"
+    "publish:major": "npm run build && npm run version:major && git push --follow-tags && npm publish --access public",
+    "semantic-release": "semantic-release"
+  },
+  "publishConfig": {
+    "access": "public"
+  },
+  "release": {
+    "branches": [
+      "+([0-9])?(.{+([0-9]),x}).x",
+      "master",
+      "next",
+      "next-major",
+      {
+        "name": "beta",
+        "prerelease": true
+      },
+      {
+        "name": "alpha",
+        "prerelease": true
+      }
+    ],
+    "plugins": [
+      "@semantic-release/commit-analyzer",
+      "@semantic-release/release-notes-generator",
+      "@semantic-release/changelog",
+      "@semantic-release/npm",
+      "@semantic-release/git",
+      [
+        "@semantic-release/github",
+        {
+          "addReleases": "top"
+        }
+      ]
+    ]
   },
   "license": "MIT",
   "dependencies": {
@@ -44,20 +77,27 @@
   },
   "devDependencies": {
     "@babel/plugin-proposal-optional-chaining": "^7.14.5",
-    "@rollup/plugin-alias": "^3.1.5",
-    "@types/jest": "^27.0.0",
+    "@rollup/plugin-alias": "^3.1.8",
+    "@semantic-release/changelog": "^6.0.0",
+    "@semantic-release/commit-analyzer": "^9.0.1",
+    "@semantic-release/git": "^10.0.0",
+    "@semantic-release/github": "^8.0.1",
+    "@semantic-release/npm": "^8.0.0",
+    "@semantic-release/release-notes-generator": "^10.0.2",
+    "@types/jest": "^27.0.2",
     "@types/mocha": "^9.0.0",
     "@zerollup/ts-transform-paths": "^1.7.18",
     "dotenv": "^10.0.0",
     "dotenv-webpack": "^7.0.3",
-    "jest": "^27.0.6",
+    "jest": "^27.3.1",
     "path": "^0.12.7",
     "query-string": "^7.0.1",
-    "ts-jest": "^27.0.4",
-    "ts-loader": "^9.2.5",
+    "semantic-release": "^18.0.0",
+    "ts-jest": "^27.0.7",
+    "ts-loader": "^9.2.6",
     "tsconfig-paths-jest": "^0.0.1",
     "tsdx": "^0.14.1",
     "ttypescript": "^1.5.12",
-    "typescript": "^4.3.5"
+    "typescript": "^4.4.4"
   }
 }
