--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -7,6 +7,7 @@ on:
 jobs:
   release:
     name: Release
+    environment: staging
     runs-on: ubuntu-18.04
     steps:
       - name: Checkout
@@ -14,10 +15,19 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v1
         with:
-          node-version: 14
+          node-version: 16
       - name: Install dependencies
         run: npm i
       - name: Run specs
+        env:
+          ENDPOINT: ${{ secrets.ENDPOINT }}
+          SALES_CHANNEL_ID: ${{ secrets.SALES_CHANNEL_ID }}
+          CLIENT_ID: ${{ secrets.CLIENT_ID}}
+          CLIENT_SECRET: ${{ secrets.CLIENT_SECRET }}
+          SCOPE: ${{ secrets.SCOPE}}
+          WEBAPP_CLIENT_ID: ${{ secrets.WEBAPP_CLIENT_ID }}
+          WEBAPP_CLIENT_SECRET: ${{ secrets.WEBAPP_CLIENT_SECRET}}
+          CALLBACK_URL: ${{ secrets.CALLBACK_URL}}
         run: npm test
       - name: Run package
         run: npm run build
