feat: Remove tsdx, reduce build size, and export new types

--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "name": "Alessandro Casazza",
     "email": "alessandro@commercelayer.io"
   },
-  "main": "dist/index.js",
-  "types": "dist/index.d.ts",
+  "main": "lib/cjs/index.js",
+  "module": "lib/esm/index.js",
   "files": [
     "dist",
     "package.json",
@@ -28,9 +28,10 @@
   },
   "homepage": "https://github.com/commercelayer/commercelayer-js-auth#readme",
   "scripts": {
-    "test": "tsdx test",
-    "test:coverage": "tsdx test --coverage",
-    "build": "tsdx build --tsconfig ./tsconfig.prod.json -i ./src/index.ts",
+    "test": "jest",
+    "test:coverage": "jest --coverage",
+    "build": "tsc -b tsconfig.json tsconfig.esm.json --v",
+    "postbuild": "minimize-js lib",
     "version:patch": "npm version patch",
     "version:minor": "npm version minor",
     "version:major": "npm version major",
@@ -76,28 +77,20 @@
     "client-oauth2": "^4.3.3"
   },
   "devDependencies": {
-    "@babel/plugin-proposal-optional-chaining": "^7.14.5",
-    "@rollup/plugin-alias": "^3.1.8",
-    "@semantic-release/changelog": "^6.0.0",
+    "@babel/preset-env": "^7.16.0",
+    "@babel/preset-typescript": "^7.16.0",
+    "@semantic-release/changelog": "^6.0.1",
     "@semantic-release/commit-analyzer": "^9.0.1",
-    "@semantic-release/git": "^10.0.0",
-    "@semantic-release/github": "^8.0.1",
-    "@semantic-release/npm": "^8.0.0",
+    "@semantic-release/git": "^10.0.1",
+    "@semantic-release/github": "^8.0.2",
+    "@semantic-release/npm": "^8.0.3",
     "@semantic-release/release-notes-generator": "^10.0.2",
     "@types/jest": "^27.0.2",
     "@types/mocha": "^9.0.0",
-    "@zerollup/ts-transform-paths": "^1.7.18",
     "dotenv": "^10.0.0",
-    "dotenv-webpack": "^7.0.3",
     "jest": "^27.3.1",
-    "path": "^0.12.7",
-    "query-string": "^7.0.1",
+    "minimize-js": "^1.0.0",
     "semantic-release": "^18.0.0",
-    "ts-jest": "^27.0.7",
-    "ts-loader": "^9.2.6",
-    "tsconfig-paths-jest": "^0.0.1",
-    "tsdx": "^0.14.1",
-    "ttypescript": "^1.5.12",
     "typescript": "^4.4.4"
   }
 }
