--- a/package.json
+++ b/package.json
@@ -91,6 +91,7 @@
     "jest": "^27.3.1",
     "minimize-js": "^1.0.0",
     "semantic-release": "^18.0.0",
+    "tslib": "^2.3.1",
     "typescript": "^4.4.4"
   }
 }
