fix: Change lib path

--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "main": "lib/cjs/index.js",
   "module": "lib/esm/index.js",
   "files": [
-    "dist",
+    "lib",
     "package.json",
     "README.md"
   ],
