--- a/package.json
+++ b/package.json
@@ -74,7 +74,8 @@
   },
   "license": "MIT",
   "dependencies": {
-    "client-oauth2": "^4.3.3"
+    "client-oauth2": "^4.3.3",
+    "tslib": "^2.3.1"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.16.4",
@@ -91,7 +92,6 @@
     "jest": "^27.4.3",
     "minimize-js": "^1.0.0",
     "semantic-release": "^18.0.1",
-    "tslib": "^2.3.1",
     "typescript": "^4.5.2"
   }
 }
