--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "name": "Alessandro Casazza",
     "email": "alessandro@commercelayer.io"
   },
-  "main": "lib/cjs/index.js",
-  "module": "lib/esm/index.js",
+  "module": "lib/index.js",
+  "types": "lib/index.d.ts",
   "files": [
     "lib",
     "package.json",
@@ -30,7 +30,8 @@
   "scripts": {
     "test": "jest",
     "test:coverage": "jest --coverage",
-    "build": "tsc -b tsconfig.json tsconfig.esm.json --v",
+    "build": "tsc -b tsconfig.json --v",
+    "lint": "eslint src",
     "postbuild": "minimize-js lib -w -s",
     "version:patch": "npm version patch",
     "version:minor": "npm version minor",
@@ -78,20 +79,23 @@
     "tslib": "^2.3.1"
   },
   "devDependencies": {
-    "@babel/preset-env": "^7.16.5",
-    "@babel/preset-typescript": "^7.16.5",
+    "@babel/preset-env": "^7.16.11",
+    "@babel/preset-typescript": "^7.16.7",
     "@semantic-release/changelog": "^6.0.1",
     "@semantic-release/commit-analyzer": "^9.0.2",
     "@semantic-release/git": "^10.0.1",
     "@semantic-release/github": "^8.0.2",
-    "@semantic-release/npm": "^8.0.3",
+    "@semantic-release/npm": "^9.0.0",
     "@semantic-release/release-notes-generator": "^10.0.3",
-    "@types/jest": "^27.0.3",
-    "@types/mocha": "^9.0.0",
-    "dotenv": "^10.0.0",
-    "jest": "^27.4.5",
+    "@types/jest": "^27.4.0",
+    "@types/mocha": "^9.1.0",
+    "@typescript-eslint/eslint-plugin": "^5.11.0",
+    "dotenv": "^16.0.0",
+    "eslint": "^8.8.0",
+    "eslint-plugin-react": "^7.28.0",
+    "jest": "^27.5.1",
     "minimize-js": "^1.2.0",
-    "semantic-release": "^18.0.1",
-    "typescript": "^4.5.4"
+    "semantic-release": "^19.0.2",
+    "typescript": "^4.5.5"
   }
 }
