--- a/package.json
+++ b/package.json
@@ -1,102 +1,20 @@
 {
-  "name": "@commercelayer/js-auth",
-  "version": "2.3.0",
-  "description": "Commerce Layer Javascript Auth",
-  "repository": {
-    "url": "https://github.com/commercelayer/commercelayer-js-auth.git"
-  },
+  "name": "root",
+  "private": true,
   "author": {
     "name": "Alessandro Casazza",
     "email": "alessandro@commercelayer.io"
   },
-  "main": "lib/cjs/index.js",
-  "module": "lib/esm/index.js",
-  "types": "lib/esm/index.d.ts",
-  "files": [
-    "lib",
-    "package.json",
-    "README.md"
-  ],
-  "keywords": [
-    "jamstack",
-    "headless",
-    "ecommerce",
-    "api",
-    "auth"
-  ],
-  "bugs": {
-    "url": "https://github.com/commercelayer/commercelayer-js-auth/issues"
-  },
-  "homepage": "https://github.com/commercelayer/commercelayer-js-auth#readme",
   "scripts": {
-    "test": "jest",
-    "test:coverage": "jest --coverage",
-    "build": "tsc -b tsconfig.json tsconfig.cjs.json --v",
-    "lint": "eslint src",
-    "postbuild": "minimize-js lib -w -s",
-    "version:patch": "npm version patch",
-    "version:minor": "npm version minor",
-    "version:major": "npm version major",
-    "publish:patch": "npm run build && npm run version:patch && git push --follow-tags && npm publish --access public",
-    "publish:minor": "npm run build && npm run version:minor && git push --follow-tags && npm publish --access public",
-    "publish:major": "npm run build && npm run version:major && git push --follow-tags && npm publish --access public",
-    "semantic-release": "semantic-release"
-  },
-  "publishConfig": {
-    "access": "public"
-  },
-  "release": {
-    "branches": [
-      "+([0-9])?(.{+([0-9]),x}).x",
-      "master",
-      "next",
-      "next-major",
-      {
-        "name": "beta",
-        "prerelease": true
-      },
-      {
-        "name": "alpha",
-        "prerelease": true
-      }
-    ],
-    "plugins": [
-      "@semantic-release/commit-analyzer",
-      "@semantic-release/release-notes-generator",
-      "@semantic-release/changelog",
-      "@semantic-release/npm",
-      "@semantic-release/git",
-      [
-        "@semantic-release/github",
-        {
-          "addReleases": "top"
-        }
-      ]
-    ]
-  },
-  "license": "MIT",
-  "dependencies": {
-    "client-oauth2": "^4.3.3",
-    "tslib": "^2.3.1"
+    "preinstall": "npx only-allow pnpm",
+    "build": "pnpm -r build",
+    "prepare": "husky install",
+    "test": "pnpm -r test"
   },
   "devDependencies": {
-    "@babel/preset-env": "^7.16.11",
-    "@babel/preset-typescript": "^7.16.7",
-    "@semantic-release/changelog": "^6.0.1",
-    "@semantic-release/commit-analyzer": "^9.0.2",
-    "@semantic-release/git": "^10.0.1",
-    "@semantic-release/github": "^8.0.2",
-    "@semantic-release/npm": "^9.0.0",
-    "@semantic-release/release-notes-generator": "^10.0.3",
-    "@types/jest": "^27.4.0",
-    "@types/mocha": "^9.1.0",
-    "@typescript-eslint/eslint-plugin": "^5.11.0",
-    "dotenv": "^16.0.0",
-    "eslint": "^8.8.0",
-    "eslint-plugin-react": "^7.28.0",
-    "jest": "^27.5.1",
-    "minimize-js": "^1.2.0",
-    "semantic-release": "^19.0.2",
-    "typescript": "^4.5.5"
+    "@commercelayer/eslint-config-ts": "^1.0.0",
+    "husky": "^8.0.3",
+    "lerna": "^6.6.2",
+    "typescript": "^5.0.4"
   }
 }
