--- a/packages/js-auth/package.json
+++ b/packages/js-auth/package.json
@@ -56,5 +56,8 @@
     "vite": "^4.3.5",
     "vite-tsconfig-paths": "^4.2.0",
     "vitest": "^0.31.0"
+  },
+  "engines": {
+    "node": ">=18.0.0"
   }
 }
