--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -14,7 +14,7 @@ jobs:
       - name: pnpm 🧰
         uses: pnpm/action-setup@v2.2.2
         with:
-          version: 7
+          version: 8.x
 
       - name: Node 🧰
         uses: actions/setup-node@v3
