--- a/packages/js-auth/package.json
+++ b/packages/js-auth/package.json
@@ -29,8 +29,8 @@
   },
   "homepage": "https://github.com/commercelayer/commercelayer-js-auth#readme",
   "scripts": {
-    "lint": "eslint src",
-    "lint:fix": "eslint src --fix",
+    "lint": "eslint src --ext .ts,.tsx",
+    "lint:fix": "eslint src --ext .ts,.tsx --fix",
     "test": "pnpm run lint && vitest run --silent",
     "coverage": "vitest run --coverage",
     "test:e2e": "NODE_ENV=test playwright test",
@@ -45,17 +45,17 @@
   },
   "license": "MIT",
   "devDependencies": {
-    "@types/node": "^20.1.2",
-    "@vitejs/plugin-react": "^4.0.0",
-    "@vitest/coverage-c8": "^0.31.0",
-    "jsdom": "^22.0.0",
-    "minimize-js": "^1.3.1",
-    "tsc-alias": "^1.8.6",
-    "tslib": "^2.5.0",
-    "typescript": "^5.0.4",
-    "vite": "^4.3.5",
-    "vite-tsconfig-paths": "^4.2.0",
-    "vitest": "^0.31.0"
+    "@types/node": "^20.8.9",
+    "@vitejs/plugin-react": "^4.1.0",
+    "@vitest/coverage-c8": "^0.33.0",
+    "jsdom": "^22.1.0",
+    "minimize-js": "^1.4.0",
+    "tsc-alias": "^1.8.8",
+    "tslib": "^2.6.2",
+    "typescript": "^5.2.2",
+    "vite": "^4.5.0",
+    "vite-tsconfig-paths": "^4.2.1",
+    "vitest": "^0.34.6"
   },
   "engines": {
     "node": ">=18.0.0"
