--- a/package.json
+++ b/package.json
@@ -9,12 +9,13 @@
     "preinstall": "npx only-allow pnpm",
     "build": "pnpm -r build",
     "prepare": "husky install",
-    "test": "pnpm -r test"
+    "test": "pnpm -r test",
+    "make:version": "lerna version --no-private"
   },
   "devDependencies": {
-    "@commercelayer/eslint-config-ts": "^1.1.0",
-    "husky": "^8.0.3",
-    "lerna": "^7.4.1",
-    "typescript": "^5.2.2"
+    "@commercelayer/eslint-config-ts": "^1.3.0",
+    "husky": "^9.0.10",
+    "lerna": "^8.1.2",
+    "typescript": "^5.3.3"
   }
 }
