--- a/packages/js-auth/package.json
+++ b/packages/js-auth/package.json
@@ -44,6 +44,9 @@
     "access": "public"
   },
   "license": "MIT",
+  "dependencies": {
+    "tslib": "^2.6.2"
+  },
   "devDependencies": {
     "@types/node": "^20.11.16",
     "@vitejs/plugin-react": "^4.2.1",
@@ -51,7 +54,6 @@
     "jsdom": "^24.0.0",
     "minimize-js": "^1.4.0",
     "tsc-alias": "^1.8.8",
-    "tslib": "^2.6.2",
     "typescript": "^5.3.3",
     "vite": "^5.1.0",
     "vite-tsconfig-paths": "^4.3.1",
