--- a/packages/js-auth/package.json
+++ b/packages/js-auth/package.json
@@ -18,9 +18,7 @@
   },
   "main": "./dist/index.js",
   "files": [
-    "dist",
-    "package.json",
-    "README.md"
+    "dist"
   ],
   "keywords": [
     "jamstack",
@@ -37,10 +35,6 @@
     "lint": "eslint src --ext .ts,.tsx",
     "lint:fix": "eslint src --ext .ts,.tsx --fix",
     "test": "pnpm run lint && vitest run --silent",
-    "coverage": "vitest run --coverage",
-    "test:e2e": "NODE_ENV=test playwright test",
-    "test:e2e:coverage": "nyc pnpm test:e2e && pnpm coverage:report",
-    "coverage:report": "nyc report --reporter=html",
     "build": "tsup"
   },
   "publishConfig": {
@@ -48,15 +42,11 @@
   },
   "license": "MIT",
   "devDependencies": {
-    "@types/node": "^20.11.16",
-    "@vitejs/plugin-react": "^4.2.1",
-    "@vitest/coverage-c8": "^0.33.0",
-    "jsdom": "^24.0.0",
+    "@types/node": "^20.11.27",
     "tsup": "^8.0.2",
-    "typescript": "^5.3.3",
-    "vite": "^5.1.0",
-    "vite-tsconfig-paths": "^4.3.1",
-    "vitest": "^1.2.2"
+    "typescript": "^5.4.2",
+    "vite-tsconfig-paths": "^4.3.2",
+    "vitest": "^1.3.1"
   },
   "engines": {
     "node": ">=18.0.0"
