--- a/package.json
+++ b/package.json
@@ -7,10 +7,13 @@
   },
   "scripts": {
     "preinstall": "npx only-allow pnpm",
-    "build": "pnpm -r build",
+    "build": "pnpm --filter js-auth build",
     "prepare": "husky install",
-    "test": "pnpm -r test",
-    "make:version": "lerna version --no-private"
+    "test": "pnpm --filter js-auth test",
+    "make:version": "lerna version --no-private",
+    "example:cjs": "pnpm --filter cjs start",
+    "example:esm": "pnpm --filter esm start",
+    "example:esm:serve": "pnpm --filter esm serve"
   },
   "devDependencies": {
     "@commercelayer/eslint-config-ts": "^1.3.0",
