--- a/packages/js-auth/tsconfig.json
+++ b/packages/js-auth/tsconfig.json
@@ -27,9 +27,7 @@
     "skipLibCheck": true /* Skip type checking of declaration files. */,
     "forceConsistentCasingInFileNames": true /* Disallow inconsistently-cased references to the same file. */
   },
-  "include": [
-    "**/*.ts"
-  ],
+  "include": ["**/*.ts", ".eslintrc.cjs"],
   "exclude": [
     "node_modules"
   ]
