docs: complete 'cloudflare-workers' example

--- a/examples/cloudflare-workers/package.json
+++ b/examples/cloudflare-workers/package.json
@@ -1,12 +1,14 @@
 {
   "name": "cloudflare-workers",
-  "version": "0.0.0",
   "private": true,
   "scripts": {
     "deploy": "wrangler deploy",
     "dev": "wrangler dev",
     "start": "wrangler dev",
     "test": "vitest"
+  },
+  "dependencies": {
+    "@commercelayer/js-auth": "workspace:^5.0.0"
   },
   "devDependencies": {
     "@cloudflare/vitest-pool-workers": "^0.1.0",
