--- a/examples/esm/package.json
+++ b/examples/esm/package.json
@@ -8,6 +8,6 @@
     "serve": "npx serve"
   },
   "dependencies": {
-    "@commercelayer/js-auth": "workspace:^5.0.0"
+    "@commercelayer/js-auth": "workspace:*"
   }
 }
