--- a/examples/cloudflare-workers/package.json
+++ b/examples/cloudflare-workers/package.json
@@ -1,6 +1,7 @@
 {
-  "name": "cloudflare-workers",
   "private": true,
+  "name": "cloudflare-workers",
+  "version": "5.2.1",
   "scripts": {
     "deploy": "wrangler deploy",
     "dev": "wrangler dev",
