--- a/packages/js-auth/package.json
+++ b/packages/js-auth/package.json
@@ -35,6 +35,7 @@
     "lint": "eslint src --ext .ts,.tsx",
     "lint:fix": "eslint src --ext .ts,.tsx --fix",
     "test": "pnpm run lint && vitest run --silent",
+    "test:watch": "vitest --silent",
     "build": "tsup"
   },
   "publishConfig": {
@@ -42,7 +43,9 @@
   },
   "license": "MIT",
   "devDependencies": {
+    "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^20.11.27",
+    "jsonwebtoken": "^9.0.2",
     "tsup": "^8.0.2",
     "typescript": "^5.4.2",
     "vite-tsconfig-paths": "^4.3.2",
