--- a/packages/js-auth/package.json
+++ b/packages/js-auth/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@commercelayer/js-auth",
-  "version": "6.0.0-beta.2",
+  "version": "6.0.0",
   "description": "Commerce Layer Javascript Auth",
   "repository": {
     "url": "https://github.com/commercelayer/commercelayer-js-auth.git"
