feat: add configuration for jsr.io

--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -7,6 +7,11 @@ on:
 jobs:
   publish:
     runs-on: ubuntu-latest
+
+    permissions:
+      contents: read
+      id-token: write
+
     steps:
       - name: Checkout 🛎️
         uses: actions/checkout@v4
@@ -43,7 +48,12 @@ jobs:
           pnpm -r publish --no-git-checks --access public
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
-      
+
+      - name: Publish 🚀 PRODUCTION on JSR.io
+        if: '!github.event.release.prerelease'
+        run: |
+          pnpm --filter '*' jsr:publish
+
       - name: Post to a Slack channel
         id: slack
         uses: slackapi/slack-github-action@v1.25.0
