--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
     "make:version": "lerna version --no-private",
     "example:cjs": "pnpm --filter cjs start",
     "example:esm": "pnpm --filter esm start",
-    "example:esm:serve": "pnpm --filter esm serve"
+    "example:esm:serve": "pnpm --filter esm serve",
+    "version": "node update-jsr-version.js && git add ."
   },
   "devDependencies": {
     "@commercelayer/eslint-config-ts": "^1.3.0",
     "husky": "^9.0.11",
     "lerna": "^8.1.2",
+    "replace-in-file": "^7.1.0",
     "typescript": "^5.4.2"
   }
 }
