--- a/packages/js-auth/package.json
+++ b/packages/js-auth/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@commercelayer/js-auth",
   "version": "6.0.1",
-  "description": "Commerce Layer Javascript Auth",
+  "description": "A JavaScript library designed to simplify authentication when interacting with the Commerce Layer API.",
   "repository": {
     "url": "https://github.com/commercelayer/commercelayer-js-auth.git"
   },
