chore: add more tests for the authenticate helper

--- a/packages/js-auth/.env.example
+++ b/packages/js-auth/.env.example
@@ -1,8 +1,14 @@
 # Unit tests
-VITE_TEST_CLIENT_ID=
+VITE_TEST_SALES_CHANNEL_CLIENT_ID=
+VITE_TEST_SALES_CHANNEL_CLIENT_SECRET=
+VITE_TEST_INTEGRATION_CLIENT_ID=
+VITE_TEST_INTEGRATION_CLIENT_SECRET=
+VITE_TEST_USER_ID=
+VITE_TEST_CUSTOMER_ID=
 VITE_TEST_DOMAIN=
 VITE_TEST_SCOPE=
 VITE_TEST_USERNAME=
 VITE_TEST_PASSWORD=
-VITE_TEST_INTEGRATION_CLIENT_ID=
-VITE_TEST_CLIENT_SECRET=
+VITE_TEST_PROVISIONING_DOMAIN=
+VITE_TEST_PROVISIONING_CLIENT_ID=
+VITE_TEST_PROVISIONING_CLIENT_SECRET=
