fix: type definition for assertion and access token owner

--- a/packages/js-auth/package.json
+++ b/packages/js-auth/package.json
@@ -35,8 +35,8 @@
   "scripts": {
     "lint": "eslint src --ext .ts,.tsx",
     "lint:fix": "eslint src --ext .ts,.tsx --fix",
-    "test": "pnpm run lint && vitest run --silent",
-    "test:watch": "vitest --silent",
+    "test": "pnpm run lint && vitest run",
+    "test:watch": "vitest",
     "build": "tsup",
     "jsr:publish": "pnpm dlx jsr publish"
   },
