--- a/packages/js-auth/.env.example
+++ b/packages/js-auth/.env.example
@@ -3,6 +3,8 @@ VITE_TEST_SALES_CHANNEL_CLIENT_ID=
 VITE_TEST_SALES_CHANNEL_CLIENT_SECRET=
 VITE_TEST_INTEGRATION_CLIENT_ID=
 VITE_TEST_INTEGRATION_CLIENT_SECRET=
+VITE_TEST_AUTHORIZATION_CODE_CLIENT_ID=
+VITE_TEST_AUTHORIZATION_CODE_CLIENT_SECRET=
 VITE_TEST_USER_ID=
 VITE_TEST_CUSTOMER_ID=
 VITE_TEST_DOMAIN=
