--- a/examples/deno/deno.json
+++ b/examples/deno/deno.json
@@ -1,5 +1,8 @@
 {
   "tasks": {
     "start": "deno run --allow-net index.ts"
+  },
+  "imports": {
+    "@commercelayer/js-auth": "jsr:@commercelayer/js-auth@^6.1.0"
   }
 }
