--- a/packages/js-auth/package.json
+++ b/packages/js-auth/package.json
@@ -38,7 +38,7 @@
     "test": "pnpm run lint && vitest run",
     "test:watch": "vitest",
     "build": "tsup",
-    "jsr:publish": "pnpm dlx jsr publish"
+    "jsr:publish": "npx jsr publish"
   },
   "publishConfig": {
     "access": "public"
@@ -46,11 +46,11 @@
   "license": "MIT",
   "devDependencies": {
     "@types/jsonwebtoken": "^9.0.6",
-    "@types/node": "^20.12.7",
+    "@types/node": "^20.12.10",
     "jsonwebtoken": "^9.0.2",
     "tsup": "^8.0.2",
     "typescript": "^5.4.5",
-    "vitest": "^1.5.0"
+    "vitest": "^1.6.0"
   },
   "engines": {
     "node": ">=18.0.0"
