--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -24,7 +24,7 @@ jobs:
       - name: pnpm 🧰
         uses: pnpm/action-setup@v3
         with:
-          version: 8.x
+          version: 9.x
 
       - name: Node 🧰
         uses: actions/setup-node@v4
@@ -33,7 +33,13 @@ jobs:
           cache: 'pnpm'
 
       - name: Install 📦
-        run: pnpm install
+        run: pnpm install --frozen-lockfile
+
+      - name: Build 🛠
+        run: pnpm build
+
+      - name: Uncommitted changes 🔎
+        run: git status
 
       - name: Run Audit 🔬
         run: pnpm audit || exit 0
