--- a/examples/nextjs/package.json
+++ b/examples/nextjs/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@commercelayer/js-auth": "workspace:*",
     "react": "^18",
     "react-dom": "^18",
     "next": "14.2.5"
