--- a/packages/js-auth/package.json
+++ b/packages/js-auth/package.json
@@ -50,7 +50,8 @@
     "jsonwebtoken": "^9.0.2",
     "tsup": "^8.2.4",
     "typescript": "^5.5.4",
-    "vitest": "^2.0.5"
+    "vitest": "^2.0.5",
+    "vitest-fetch-mock": "^0.3.0"
   },
   "engines": {
     "node": ">=18.0.0"
