chore: update tests with the new token iss

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -63,3 +63,4 @@ jobs:
           VITE_TEST_PROVISIONING_DOMAIN: ${{ vars.VITE_TEST_PROVISIONING_DOMAIN }}
           VITE_TEST_PROVISIONING_CLIENT_ID: ${{ secrets.VITE_TEST_PROVISIONING_CLIENT_ID }}
           VITE_TEST_PROVISIONING_CLIENT_SECRET: ${{ secrets.VITE_TEST_PROVISIONING_CLIENT_SECRET }}
+          VITE_TEST_TOKEN_ISS: ${{ vars.VITE_TEST_TOKEN_ISS }}
