--- a/packages/js-auth/package.json
+++ b/packages/js-auth/package.json
@@ -35,7 +35,7 @@
   "scripts": {
     "lint": "eslint src --ext .ts,.tsx",
     "lint:fix": "eslint src --ext .ts,.tsx --fix",
-    "test": "pnpm run lint && vitest run",
+    "test": "pnpm run lint:fix && vitest run",
     "test:watch": "vitest",
     "build": "tsup",
     "jsr:publish": "npx jsr publish"
