--- a/packages/js-auth/.env.example
+++ b/packages/js-auth/.env.example
@@ -12,6 +12,7 @@ VITE_TEST_USER_ID=
 VITE_TEST_CUSTOMER_ID=
 VITE_TEST_DOMAIN=
 VITE_TEST_SCOPE=
+VITE_TEST_STORE_SCOPE=
 VITE_TEST_USERNAME=
 VITE_TEST_PASSWORD=
 VITE_TEST_PROVISIONING_DOMAIN=
