chore: add badge for 'dependencies'

--- a/.github/release.yaml
+++ b/.github/release.yaml
@@ -20,6 +20,9 @@ changelog:
     - title: 📝 Documentation
       labels:
         - documentation
+    - title: 🆙 Dependencies
+      labels:
+        - dependencies
     - title: Other Changes
       labels:
         - "*"
