chore: use pkg.pr.new template

--- a/.github/workflows/pkg-pr-new.yaml
+++ b/.github/workflows/pkg-pr-new.yaml
@@ -40,4 +40,4 @@ jobs:
 
       - name: Publish 🚀 pkg.pr.new
         run: |
-          npx pkg-pr-new publish './packages/js-auth' --no-template
+          npx pkg-pr-new publish './packages/js-auth'
