chore: replace eslint with biomejs

--- a/packages/js-auth/tsconfig.json
+++ b/packages/js-auth/tsconfig.json
@@ -22,7 +22,7 @@
     "skipLibCheck": true /* Skip type checking of declaration files. */,
     "forceConsistentCasingInFileNames": true /* Disallow inconsistently-cased references to the same file. */
   },
-  "include": ["**/*.ts", ".eslintrc.cjs"],
+  "include": ["**/*.ts"],
   "exclude": [
     "node_modules"
   ]
