--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "dep:minor": "pnpm dep:major -t minor"
   },
   "devDependencies": {
-    "@commercelayer/eslint-config-ts": "^1.4.5",
+    "@biomejs/biome": "^1.9.4",
     "husky": "^9.1.7",
     "lerna": "^8.1.9",
     "replace-in-file": "^8.3.0",
