--- a/packages/js-auth/package.json
+++ b/packages/js-auth/package.json
@@ -33,8 +33,8 @@
   },
   "homepage": "https://github.com/commercelayer/commercelayer-js-auth#readme",
   "scripts": {
-    "lint": "eslint src --ext .ts,.tsx",
-    "lint:fix": "eslint src --ext .ts,.tsx --fix",
+    "lint": "pnpm biome check src",
+    "lint:fix": "pnpm biome check src --write",
     "test": "pnpm run lint:fix && vitest run",
     "test:watch": "vitest",
     "build": "tsup",
