--- a/biome.json
+++ b/biome.json
@@ -26,8 +26,7 @@
   "javascript": {
     "formatter": {
       "quoteStyle": "single",
-      "semicolons": "asNeeded",
-      "trailingCommas": "none"
+      "semicolons": "asNeeded"
     }
   }
 }
