chore: add apiCredentials example for nextjs projects

--- a/examples/nextjs/package.json
+++ b/examples/nextjs/package.json
@@ -10,9 +10,13 @@
   },
   "dependencies": {
     "@commercelayer/js-auth": "workspace:*",
+    "@types/js-cookie": "^3.0.6",
+    "ioredis": "^5.6.1",
+    "js-cookie": "^3.0.5",
     "react": "^19",
     "react-dom": "^19",
-    "next": "15.5.3"
+    "next": "15.5.3",
+    "unstorage": "^1.17.1"
   },
   "devDependencies": {
     "typescript": "^5",
