chore: format with Biome 2

--- a/examples/nextjs/.env.example
+++ b/examples/nextjs/.env.example
@@ -1,6 +1,7 @@
-# Created by Vercel CLI
-REDIS_URL=
-VERCEL_OIDC_TOKEN=
-
+# Sales channel configuration
 NEXT_PUBLIC_CLIENT_ID="BISG8bb3GWpC8_D7Nt1SuWWdieS5bJq831A50LgB_Ig"
 NEXT_PUBLIC_SCOPE="market:id:KoaJYhMVVj"
+
+# Redis configuration
+REDIS_URL=
+VERCEL_OIDC_TOKEN=
