--- a/package.json
+++ b/package.json
@@ -22,11 +22,16 @@
     "dep:minor": "pnpm dep:major -t minor"
   },
   "devDependencies": {
-    "@biomejs/biome": "^2.3.0",
+    "@biomejs/biome": "^2.3.8",
     "husky": "^9.1.7",
-    "lerna": "^9.0.0",
-    "replace-in-file": "^8.3.0",
+    "lerna": "^9.0.3",
+    "replace-in-file": "^8.4.0",
     "typescript": "^5.9.3"
+  },
+  "resolutions": {
+    "glob": ">=11.1.0",
+    "js-yaml": ">=3.14.2",
+    "tar": ">=7.5.2"
   },
   "engines": {
     "node": ">=20.0.0"
