--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -28,6 +28,9 @@ jobs:
           registry-url: https://registry.npmjs.org
           cache: 'pnpm'
 
+      - name: Update npm
+        run: npm install -g npm@latest
+
       - name: Install 📦
         run: pnpm install --frozen-lockfile
 
