chore: update author email

--- a/packages/js-auth/package.json
+++ b/packages/js-auth/package.json
@@ -7,7 +7,7 @@
   },
   "author": {
     "name": "Commerce Layer",
-    "email": "support@commercelayer.io"
+    "email": "development@commercelayer.io"
   },
   "type": "module",
   "exports": {
