--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "author": {
     "name": "Commerce Layer",
-    "email": "support@commercelayer.io"
+    "email": "development@commercelayer.io"
   },
   "scripts": {
     "clean": "pnpx rimraf --glob **/node_modules **/pnpm-lock.yaml",
