--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -14,15 +14,15 @@ jobs:
 
     steps:
       - name: Checkout 🛎️
-        uses: actions/checkout@v4
+        uses: actions/checkout@v6
 
       - name: pnpm 🧰
         uses: pnpm/action-setup@v4
         with:
-          version: 10
+          version: 10.x
 
       - name: Node 🧰
-        uses: actions/setup-node@v5
+        uses: actions/setup-node@v6
         with:
           node-version: 20.x
           registry-url: https://registry.npmjs.org
